# giga-levenshtein

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust_levenshtein.pyi
benches/: bench_oas.rs  levenshtein_bench.rs
src/: lib.rs  simd.rs
tests/: benchmark.py  benchmark_oas.py  test_levenshtein.py
