[package]
name = "rust_levenshtein"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_levenshtein"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "levenshtein_bench"
harness = false
