[package]
name = "giga_levenshtein"
version = "0.1.0"
edition = "2021"

[lib]
name = "giga_levenshtein"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
flate2 = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "levenshtein_bench"
harness = false

[[bench]]
name = "bench_oas"
harness = false
